# COS-214-Practicals-2022

./: .gitignore  README.md
Prac 1/: .gitignore  u21434159_Practical1.tex
Prac 1/Submission/: AuditableSnapshot.cpp  AuditableSnapshot.h  Calculator.cpp  Calculator.h  Snapshot.cpp  Snapshot.h  Store.h  User.cpp  User.h  UserManager.cpp  UserManager.h  main.cpp  (+2 more)
Prac 2/: .gitignore  Cannibal.cpp  Cannibal.h  Enemy.cpp  Enemy.h  Gorilla.cpp  Gorilla.h  Jaguar.cpp  Jaguar.h  Prac2.vpp  Snake.cpp  Snake.h
Prac 3/: .gitignore  AeratedChocolate.cpp  AeratedChocolate.h  Aero.cpp  Aero.h  CadburyFactory.cpp  CadburyFactory.h  Chocolate.cpp  Chocolate.h  Confectionary.cpp  Confectionary.h  ConfectionaryFactory.cpp  ConfectionaryFactory.h  DairyMilk.cpp  DairyMilk.h  DairyMilkBubbly.cpp  DairyMilkBubbly.h  EmptyConfec.cpp  Lindor.cpp  Lindor.h  LindtFactory.cpp  LindtFactory.h  Milkybar.cpp  Milkybar.h  NestleFactory.cpp  NestleFactory.h  main.cpp
Prac 4/: CMakeLists.txt  makefile  marks  marks.cpp
Prac 4/Task 4/: AsynchronousDirectory.cpp  Backup.cpp  CMakeLists.txt  Directory.cpp  Directory.h  DirectoryState.cpp  DirectoryState.h  FileState.cpp  IteratorManager.cpp  Node.h  Root.cpp  Root.h  Root_unittest.cpp  Snapshot.cpp  State.cpp  State.h  SynchronousDirectory.h  main.cpp  makefile
Prac 4/Task 7/: AsyncDir_addChildTest.cpp  Backup.h  CMakeLists.txt  Directory.cpp  DirectoryIteratorFactory.h  FileIterator.h  FileState.cpp  FileState.h  IteratorManager.h  Makefile  NodeIterator.cpp  Observer.h  Root_unittest.cpp  State.cpp  main.cpp  sum.cpp  sum.h  sum_unittest.cpp
(+273 files in other folders)
